# MafiaC-Server

./: BuildAll.bat  CMakeLists.txt  Compress Symbols.bat  Configure_VS2017_XP.bat  Configure_VS2017_XP_x64.bat  Configure_VS2019_x64.bat  CopyToTestServer.bat  Linux_x64.sh  README.md  Update Archive.bat  VS2017_XP.bat  VS2017_XP_x64.bat  VS2019_x64.bat
Release/: server.xml
Server/: AdditionalPackets.h  BanList.cpp  BanList.h  BaseServer.cpp  BaseServer.h  CMakeLists.txt  MafiaServer.cpp  MafiaServer.h  MafiaServerManager.cpp  MafiaServerManager.h  Main.cpp  Peer2PeerSystem.cpp  Peer2PeerSystem.h  RConServer.cpp  RConServer.h  Resource.rc  Server.cpp  Server.h  ServerConfiguration.cpp  ServerConfiguration.h  ServerListing.cpp  ServerListing.h  ServerManager.cpp  ServerManager.h  ServerResourceMgr.cpp  ServerResourceMgr.h  ServerVersion.h  UnleashedGameProtocolHandler.cpp  UnleashedGameProtocolHandler.h  app.manifest  pch.h  resource.h
Server/Elements/: Elements.h  ServerDummy.cpp  ServerDummy.h  ServerEntity.cpp  ServerEntity.h  ServerHuman.cpp  ServerHuman.h  ServerObject.cpp  ServerObject.h  ServerPlayer.cpp  ServerPlayer.h  ServerVehicle.cpp  ServerVehicle.h
Server/Utils/: VectorTools.cpp  VectorTools.h
Test/: server.xml
Test/resources/admin/: client.js
Test/resources/chat/: server.js
Test/resources/cheatkeys/: client.js
Test/resources/freeroam/: client.js  meta.xml  server.js
Test/resources/joinquit/: server.js
Test/resources/nametags/: client.js
Test/resources/playercolours/: server.js
Test/resources/runcode/: client.js  server.js  server.lua  server.nut
Test/resources/scoreboard/: client.js  server.js
